# property24-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/commands/: post-create-command.sh
.github/: dependabot.yml
.github/workflows/: docker-build-pr.yml  docker-image.yml  docker-publish.yml  helm-publish.yml  main_property24-bot.yml  test.yml
app/: config.py  logger.py  main.py  metrics.py  ntfy.py  property24.py  server.py  state.py  telegram.py
app/util/: chat_id.py  url_to_payload.py
charts/property24-bot/: Chart.yaml  README.md  values-monitoring-example.yaml  values-ntfy-example.yaml  values-telegram-example.yaml  values.yaml
charts/property24-bot/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard-configmap.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: HELM_QUICKSTART.md
scripts/: send_message.sh  termux.sh
src/: main.py  property24_count.sh  script.sh  send_message.sh
tests/: test_dummy.py  test_main.py  test_metrics.py  test_property24.py  test_state.py  test_url_to_payload.py
