[project]
name = "property24-bot"
version = "0.1.0"
description = "A Property 24 webscraping bot that uses telegram for notifications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "types-requests>=2.32.4.20250913",
]
web = [
    "playwright>=1.55.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Enable Black compatibility
line-length = 88
target-version = "py312"

# Enable rules including isort (I) and format
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

# Isort settings
[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["duckdb"]
ignore_missing_imports = true
